bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/default_free_body_pose.error_regex
default_free_body_pose is not supported yet.
